# semiwrap

./: .gitignore  pyproject.toml
.github/workflows/: dist.yml
docs/: autowrap.rst  conf.py  demo.rst  tools.rst
docs/config/: autowrap.rst
docs/superpowers/plans/: 2026-07-10-typealias-diagnostics.md
docs/superpowers/specs/: 2026-07-10-typealias-diagnostics-design.md
examples/demo/swdemo/src/: main.cpp
src/semiwrap/: casters.py  makeplan.py  name_transform.py  pkgconf_cache.py  pyproject.py  render_meson.py  render_meson_nanobind.py  render_meson_util.py  semiwrap.nanobind.json  semiwrap.pc
src/semiwrap/autowrap/: context.py  cxxparser.py  generator_data.py  render_cls_prologue.py  render_cls_trampoline_hpp.py  render_nanobind.py  render_pybind11.py  render_tmpl_inst.py  render_wrapped.py  typealias_probe.py
src/semiwrap/cmd/: gen_modinit_hpp.py  header2dat.py  make_pyi.py  publish_casters.py  resolve_casters.py
src/semiwrap/config/: autowrap_yml.py  pyproject_toml.py
src/semiwrap/include/: gilsafe_object.h  semiwrap.h  semiwrap_buffer.h
src/semiwrap/tool/: __main__.py  create_imports.py  create_yaml.py  scan_headers.py  update_yaml.py
tests/: name_transform_helpers.py  run_tests.py  test_case_project.py  test_caster_module.py  test_ft_define.py  test_ft_docs.py  test_ft_enums.py  test_ft_ignore.py  test_ft_inheritance.py  test_ft_misc.py  test_ft_name_transform.py  test_ft_parameters.py  test_ft_rename.py  test_ft_subpkg.py  test_ft_templates.py  test_make_pyi.py  test_multiple_virtual_inheritance.py  test_name_transform.py  test_name_transform_config.py  test_typealias_probe.py
tests/cpp/: .gitignore  run_install.py
tests/cpp/sw-case-test/: meson.build  pyproject.toml
tests/cpp/sw-case-test/semiwrap/: .gitignore  case_test.yml
tests/cpp/sw-case-test/src/swcase/: __init__.py
tests/cpp/sw-case-test/src/swcase/include/: case_test.h
tests/cpp/sw-case-test/src/swcase/src/: case_test.cpp  main.cpp
tests/cpp/sw-caster-consumer/: pyproject.toml
tests/cpp/sw-caster-consumer/semiwrap/: int_with_offset_unwrap.yml  more.yml  ns_more.yml
tests/cpp/sw-caster-consumer/src/sw_caster_consumer/cpp/: int_with_offset_unwrap.h  main.cpp
tests/cpp/sw-test/: meson.build  pyproject.toml
tests/cpp/sw-test-base/: pyproject.toml
tests/cpp/sw-test-base/semiwrap/: base_class.yml  fn.yml  fn2.yml
tests/cpp/sw-test-base/src/swtest_base/: __init__.py
tests/cpp/sw-test-base/src/swtest_base/cpp/: int_with_offset.h  main.cpp  main2.cpp  main3.cpp
tests/cpp/sw-test-base/src/swtest_base/cpp/type_casters/: int_with_offset_cast.h  inty_cast.h  ns_inty_cast.h
tests/cpp/sw-test/semiwrap/: should-not-delete.yml
tests/cpp/sw-test/semiwrap/ft/: IBase.yml  IChild.yml  IGChild.yml  IMChild.yml  Overloaded.yml  PBase.yml  PChild.yml  PGChild.yml  abstract.yml  base_qualname.yml  base_qualname_hidden.yml  buffers.yml  cond_always_true.yml  cond_never_true.yml  custom_type_caster.yml  defaults.yml  define.yml  docstrings.yml  docstrings_append.yml  enums.yml  factory.yml  fields.yml  gilsafe_container.yml  ignore.yml  ignored_by_default.yml  inline_code.yml  keepalive.yml  lifetime.yml  mvi.yml  name_transform_camel.yml  name_transform_pascal.yml  name_transform_snake.yml  nested.yml  ns_class.yml  ns_hidden.yml  operators.yml  overloads.yml  parameters.yml  ref_out_by_default.yml  refqual.yml  (+30 more)
tests/cpp/sw-test/src/swtest/ft/: __init__.py
(+22 files in other folders)
