[build-system]
requires = ["hatchling>=1.26.2", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "semiwrap"
dynamic = ["version"]
description = "Semi-automated tool to wrap C++ code for use by python"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt", "LICENSE-pybind11.txt"]
authors = [
    {name = "Dustin Spicuzza", email = "robotpy@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "pkgconf",
    "sphinxify >= 0.7.3",
    "validobj ~= 1.3.0",
    "cxxheaderparser[pcpp] ~= 1.5",
    "packaging",
    "tomli",
    "tomli_w",
    "toposort",
    "dictdiffer",
    "ruamel.yaml",
    "typing-extensions",
    "pyyaml >= 5.1",
    "pybind11-stubgen ~= 2.5.1",
    "pybind11 ~= 3.0.1",
]

[project.entry-points.hatch]
semiwrap = "semiwrap.hooks"

[project.entry-points.pkg_config]
semiwrap = "semiwrap"

[project.scripts]
semiwrap = "semiwrap.tool.__main__:main"

[project.urls]
"Source code" = "https://github.com/robotpy/semiwrap"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist.hooks.vcs]
version-file = "src/semiwrap/version.py"

[tool.hatch.build.targets.sdist]
packages = ["src/semiwrap"]

[tool.black]
target-version = ["py38"]
